# shell_completion

./: Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
cargo_completion/: Cargo.toml
cargo_completion/src/: main.rs
shell_completion/: Cargo.toml
shell_completion/src/: lib.rs
src/: bash.rs  lib.rs
