[package]
name = "cargo_completion"
version = "0.0.1"
authors = ["Josh Mcguigan"]
edition = "2018"
description = "Cargo shell completion scripts in pure Rust"
repository = "https://github.com/JoshMcguigan/shell_completion"
readme = "../README.md"
keywords = ["cli", "completion", "autocomplete", "cargo"]
license = "MIT OR Apache-2.0"

[dependencies]
shell_completion = { path = "../shell_completion" }

[[bin]]
name = "_cargo_completion"
path = "src/main.rs"
